fix scrollbar

--- a/content/pages/docs/sidebar/index.less
+++ b/content/pages/docs/sidebar/index.less
@@ -12,7 +12,7 @@
     width: inherit;
     background-color: #283628;
 
-    & .footer {
+    &-footer {
       height: 72px;
     }
 
